# observability

./: .ciignore  .gitignore  CHARTS.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  deploy.just  justfile  manifest.yml  pyproject.toml  snaps.just  tox.ini  utils.just
.github/: .jira_sync_config.yaml  actionlint.yaml
.github/actions/: charm-run-task.yaml
.github/renovate/: charms.json5
.github/repos/: settings.yaml
.github/workflows/: _bundle-release.yaml  _charm-codeql-analysis.yml  _charm-dump-logs.yaml  _charm-linting.yaml  _charm-promote-train.yaml  _charm-quality-checks.yaml  _charm-release.yaml  _charm-static-analysis.yaml  _charm-terraform.yaml  (+63 more)
blueprints/: README.md
decision-records/: 01-centralizing-decision-records.md  2024-06-03--centralizing-decision-records.md  2024-06-04--server-to-keep-using-plain-http-while-waiting-for-cert.md  2024-06-04--service-to-stop-while-waiting-for-cert.md  2024-06-05--loki-ha-design-roles.md  2024-06-14--coordinated-multirole-workers.md  2024-06-25--extra-tempo-receivers.md  2024-06-27--upstream-telemetry.md  2024-07-05--communicating-team-decisions.md  2024-07-05--tempo-receivers.md  2024-07-16--shared-urls.md  2024-07-22--tempo-receivers-follow-up.md  2024-08-29--dashboard-collision.md  2024-08-29--dashboard-uid-collision.md  2024-10-09--adding-k8s-labels-from-libs.md  2024-11-07--charmed-probes.md  2024-11-07--dashboard-title-collision.md  2024-11-07--juju-doctor.md  2024-11-07--ruleset-probes.md  2024-11-12--up-alert-rules.md  2024-12-03--creating-issues-in-github-and-jira.md  2025-03-17--otelcol-arbitrary-config-adr.md  2025-03-20--node-exporter-otelcol-adr.md  2025-04-02--reconciler-observe-pattern.md  2025-04-05--otelcollector-plugins.md  2025-04-11--cos-solution-names.md  2025-04-16--redaction-processor-for-otelcol.md  2025-04-17--pr-guidelines.md  2025-05-13--charm-tracing-deprecation-path.md  2025-05-28--pyroscope-roles.md  2025-08-04--profiling-interface.md  2025-08-07--otel-profiler-scaling.md  2025-08-20--otelcollector-component-identifiers.md  2025-09-26--monorepo-terraform-modules-locations.md  2026-04-02--terraform-module-tagging.md  2026-05-12--charm-changelog-management.md  2026-05-12--snap-versioning-with-latest-folder.md  2026-07-08--s3-in-monolithic-deployments.md
deployments/: cos-lite.tf  cos.tf
manifests/: charm-security-scan.yaml  rock-security-scan.yaml
scripts/: charms.yaml  freeze_bundle.py  pyproject.toml  release_train.py  release_train_observability_charms.sh  render_bundle.py
scripts/src/test_helpers/: __init__.py  common.py  juju.py  tempo_helpers.py
ssdlc-manifests/: charm-sbom-manifest.yaml  charm-sbom.yaml  charm-secscan-manifest.yaml  charm-security-scan.yaml  rock-sbom-manifest.yaml  rock-sbom.yaml  rock-secscan-manifest.yaml
tests/: test_common.py
(+92 files in other folders)
